# docs/swagger.json
@@ -25,7 +25,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/dto.NodeRegisterRequest"
+                            "$ref": "#/definitions/dto.NodeCreateRequest"
                         }
                     }
                 ],
@@ -34,7 +34,7 @@
         }
     },
     "definitions": {
-        "dto.NodeRegisterRequest": {
+        "dto.NodeCreateRequest": {
             "type": "object",
             "properties": {
                 "confirm_password": {
@@ -45,14 +45,6 @@
                     "type": "string",
                     "example": "mehrdad@gmail.com"
                 },
-                "id": {
-                    "type": "integer",
-                    "example": 10
-                },
-                "parent_id": {
-                    "type": "integer",
-                    "example": 10
-                },
                 "password": {
                     "type": "string",
                     "example": "123456"
@@ -60,6 +52,10 @@
                 "phone_number": {
                     "type": "string",
                     "example": "09120246217"
+                },
+                "referral": {
+                    "type": "string",
+                    "example": "L100@2154"
                 },
                 "username": {
                     "type": "string",
