# dto/node_service.go
@@ -9,15 +9,11 @@ type NodeInfo struct {
 }
 
 type NodeCreateRequest struct {
-	Username        string `json:"username" example:"mehrdad"`
-	Email           string `json:"email" example:"mehrdad@gmail.com"`
-	PhoneNumber     string `json:"phone_number" example:"09120246217"`
-	Referral        string `json:"referral" example:"L100@2154"`
-	WalletId        string `json:"wallet_id" example:"TZJjSqfXwTP5YgjdhLdRV1zqpDwDsgdZZE"`
-	Password        string `json:"password" example:"123456"`
-	ConfirmPassword string `json:"confirm_password" example:"123456"`
+	UserID   uint   `json:"user_id"`
+	Referral string `json:"referral" example:"L100@2154"`
+	WalletId string `json:"wallet_id" example:"TZJjSqfXwTP5YgjdhLdRV1zqpDwDsgdZZE"`
 }
 
 type NodeCreateResponse struct {
-	NodeId uint `json:"id"`
+	ID uint `json:"id"`
 }
